--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,3 +55,16 @@ jobs:
           
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+        
+      - name: "Configure AWS Credentials"
+        # You may pin to the exact commit or the version.
+        # uses: aws-actions/configure-aws-credentials@05b148adc31e091bafbaf404f745055d4d3bc9d2
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-region: ${{secrets.AWS_REGION}}
+
+      - name: Update ${{ECS_SERVICE_NAME}} service
+        run: |
+          aws ecs update-service --cluster ${{ECS_CLUSTER_NAME}} --service ${{ECS_SERVICE_NAME}} --force-new-deployment
