--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,6 @@ jobs:
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           aws-region: ${{secrets.AWS_REGION}}
 
-      - name: Update ${{ECS_SERVICE_NAME}} service
+      - name: Update ECS service
         run: |
           aws ecs update-service --cluster ${{ECS_CLUSTER_NAME}} --service ${{ECS_SERVICE_NAME}} --force-new-deployment
