--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,6 @@ jobs:
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           aws-region: ${{secrets.AWS_REGION}}
 
-      - name: Update ECS service
+      - name: Update ECS cluester ${{secrets.ECS_CLUSTER_NAME}}; service ${{secrets.ECS_SERVICE_NAME}}
         run: |
           aws ecs update-service --cluster ${{secrets.ECS_CLUSTER_NAME}} --service ${{secrets.ECS_SERVICE_NAME}} --force-new-deployment
