--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,15 @@ jobs:
         with: 
           username: ${{secrets.DOCKER_HUB_USERNAME}}
           password: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
+        
+      - name: Configure AWS Credentials
+        # You may pin to the exact commit or the version.
+        # uses: aws-actions/configure-aws-credentials@05b148adc31e091bafbaf404f745055d4d3bc9d2
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-region: ${{secrets.AWS_REGION}}
           
       - name: Set up Docker Buildx
         id: buildx
@@ -55,16 +64,7 @@ jobs:
           
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
-        
-      - name: "Configure AWS Credentials"
-        # You may pin to the exact commit or the version.
-        # uses: aws-actions/configure-aws-credentials@05b148adc31e091bafbaf404f745055d4d3bc9d2
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
-          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          aws-region: ${{secrets.AWS_REGION}}
 
-      - name: Update ECS cluester ${{secrets.ECS_CLUSTER_NAME}}; service ${{secrets.ECS_SERVICE_NAME}}
+      - name: Update ECS service
         run: |
           aws ecs update-service --cluster ${{secrets.ECS_CLUSTER_NAME}} --service ${{secrets.ECS_SERVICE_NAME}} --force-new-deployment
