--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,7 @@ jobs:
         run: echo ${{ steps.docker_build.outputs.digest }}
         
   deploy:
+    needs: [build]
     runs-on: ubuntu-latest
     steps:  
       - name: Configure AWS Credentials
